2004/01/12 09:49 (-0500) rwmcfa1

	* pm/TestHelper.pm: if we're not 2.2.0 or greated don't allow init
	to be skipped. earlier rel's have to for some pagno thing.

	* t/GtkClipboard.t: the clipboard didn't exist for sure until 2.2.0

2004/01/11 23:59 (+0100) kaffeetisch

	* MANIFEST
	A t/GtkDnd.t: New test.

	* t/GtkTextIter.t: Test everything.

	* t/GdkRegion.t
	* t/GdkWindow.t
	* t/GtkAccelGroup.t
	* t/GtkAccelLabel.t
	* t/GtkAccelMap.t
	* t/GtkAdjustment.t
	* t/GtkAlignment.t
	* t/GtkArrow.t
	* t/GtkAspectFrame.t
	* t/GtkBin.t
	* t/GtkBox.t
	* t/GtkButtonBox.t
	* t/GtkCheckButton.t
	* t/GtkCheckMenuItem.t
	* t/GtkColorSelection.t
	* t/GtkColorSelectionDialog.t
	* t/GtkDrawingArea.t
	* t/GtkEntry.t
	* t/GtkEventBox.t
	* t/GtkFileSelection.t
	* t/GtkFixed.t
	* t/GtkFontSelection.t
	* t/GtkFrame.t
	* t/GtkHBox.t
	* t/GtkHButtonBox.t
	* t/GtkHPaned.t
	* t/GtkHRuler.t
	* t/GtkHScale.t
	* t/GtkHScrollbar.t
	* t/GtkHSeparator.t
	* t/GtkIconFactory.t
	* t/GtkImageMenuItem.t
	* t/GtkInputDialog.t
	* t/GtkInvisible.t
	* t/GtkLayout.t
	* t/GtkMenuBar.t
	* t/GtkMenuItem.t
	* t/GtkMenuShell.t
	* t/GtkMessageDialog.t
	* t/GtkMisc.t
	* t/GtkOptionMenu.t
	* t/GtkRadioMenuItem.t
	* t/GtkRange.t
	* t/GtkRc.t
	* t/GtkRuler.t
	* t/GtkScale.t
	* t/GtkScrolledWindow.t
	* t/GtkSelection.t
	* t/GtkSeparatorMenuItem.t
	* t/GtkSizeGroup.t
	* t/GtkSpinButton.t
	* t/GtkStock.t
	* t/GtkTable.t
	* t/GtkTearoffMenuItem.t
	* t/GtkToggleButton.t
	* t/GtkTreeStore.t
	* t/GtkTreeView.t
	* t/GtkVBox.t
	* t/GtkVButtonBox.t
	* t/GtkVPaned.t
	* t/GtkVRuler.t
	* t/GtkVScale.t
	* t/GtkVScrollbar.t
	* t/GtkVSeparator.t
	* t/GtkViewport.t: Remove needless 'use Gtk2;'s.

2004/01/11 11:44 (-0500) rwmcfa1

	* exmples/thread_usage.pl: initial import, example of the 'correct' way
	to use threads and Gtk2.

2004/01/11 00:56 (-0500) muppetman

	* examples/color_list.pl: commentary and clean-up, and a little
	sprucing.  add the attribute to all renderers in all columns of the