@@ -20,23 +20,27 @@ $button -> drag_dest_set_target_list($list);
 is($list -> find(Gtk2::Gdk -> TARGET_BITMAP), 23);
 is($list -> find(Gtk2::Gdk -> TARGET_STRING), 42);
 
-# my $context = Gtk2::Gdk::DragContext -> begin($window -> window(), Gtk2::Gdk -> TARGET_STRING);
-
-my $context = Gtk2::Drag -> begin($button, $list, "default", 1, Gtk2::Gdk::Event -> new("button-press"));
-isa_ok($context, "Gtk2::Gdk::DragContext");
-
-# warn $button -> drag_dest_find_target($context, $list);
-# $context -> finish(1, 0, 0);
-# $button -> drag_get_data($context, Gtk2::Gdk -> TARGET_STRING, 0);
-# warn $context -> get_source_widget();
-
 my $pixbuf = Gtk2::Gdk::Pixbuf -> new("rgb", 0, 8, 10, 10);
 
-$context -> set_icon_widget($window, 5, 5);
-# $context -> set_icon_pixmap(...);
-$context -> set_icon_pixbuf($pixbuf, 5, 5);
-$context -> set_icon_stock("gtk-add", 5, 5);
-$context -> set_icon_default();
+SKIP: {
+  skip("Gtk2::Gdk::Event::new is new in 2.2", 1)
+    if (Gtk2 -> check_version(2, 2, 0));
+
+  # my $context = Gtk2::Gdk::DragContext -> begin($window -> window(), Gtk2::Gdk -> TARGET_STRING);
+  my $context = Gtk2::Drag -> begin($button, $list, "default", 1, Gtk2::Gdk::Event -> new("button-press"));
+  isa_ok($context, "Gtk2::Gdk::DragContext");
+
+  # warn $button -> drag_dest_find_target($context, $list);
+  # $context -> finish(1, 0, 0);
+  # $button -> drag_get_data($context, Gtk2::Gdk -> TARGET_STRING, 0);
+  # warn $context -> get_source_widget();
+
+  $context -> set_icon_widget($window, 5, 5);
+  # $context -> set_icon_pixmap(...);
+  $context -> set_icon_pixbuf($pixbuf, 5, 5);
+  $context -> set_icon_stock("gtk-add", 5, 5);
+  $context -> set_icon_default();
+}
 
 is($button -> drag_check_threshold(5, 5, 100, 100), 1);
 
