@@ -1,3 +1,8 @@
+2004/01/12 23:45 (+0100) kaffeetisch
+
+	* t/GtkDnd.t: Skip a few things if Gtk2::Gdk::Event::new isn't
+	available.
+
 2004/01/12 09:49 (-0500) rwmcfa1
 
 	* pm/TestHelper.pm: if we're not 2.2.0 or greated don't allow init
